--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@mui/x-charts": "^7.5.0",
     "@reduxjs/toolkit": "^2.2.3",
     "apexcharts": "^3.49.1",
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "firebase": "^10.12.1",
+    "mysql2": "^3.10.3",
     "next": "14.2.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
